# ColabCodes

./: .gitignore  CompOp_ex_0.ipynb  ReadMe  TMM_new.py  Welcome_to_Colaboratory.ipynb  ex_1_gauss_seidel.ipynb  ex_2_fdtd_32_29.06.2022,_084624.ipynb  ex_3_TMM.ipynb  f.txt  fdtd_mur.py  fraunhofer_fresnel.ipynb  gauss_seidel.py  gausslet_decomposition.py  transferMatrix.py
ClionProject/: CMakeLists.txt  dependencies.h  main.cpp
ClionProject/debug/: CMakeCache.txt  ClionProject.cbp  Makefile  cmake_install.cmake
ClionProject/debug/source/: Makefile  cmake_install.cmake
ClionProject/default_build/: CMakeCache.txt  ClionProject.cbp  Makefile  cmake_install.cmake
ClionProject/default_build/source/: Makefile
ClionProject/final_build/: CMakeCache.txt  ClionProject.cbp  Makefile  cmake_install.cmake
ClionProject/final_build/source/: Makefile  cmake_install.cmake
ClionProject/results/: CoarsestF_MGsolutions1.txt  CoarsestF_MGsolutions2.txt  CoarsestF_MGsolutionsTest.txt  Coarsest_MGsolutions.txt  Coarsest_MGsolutions2.txt  Coarsest_MGsolutionsTest.txt  FinestExact_MGsolutions1.txt  FinestExact_MGsolutions2.txt  FinestExact_MGsolutionsTest.txt  FinestF_MGsolutions.txt  FinestF_MGsolutions1.txt  FinestF_MGsolutions2.txt  Finest_MGsolutions.txt  Finest_MGsolutions1.txt  Finest_MGsolutions2.txt  Finest_MGsolutionsTest.txt  f.txt  solution.txt  solution2.txt  uH.txt  uH_solve.txt
ClionProject/source/: CMakeLists.txt  GMG_solver.cpp  GMG_solver.h  Grid.cpp  Grid.h  Poisson_FD.cpp  Poisson_FD.h  Poisson_GMG.cpp  Poisson_GMG.h  ProblemDesc.cpp  ProblemDesc.h
(+38 files in other folders)
